# 30daymapchallenge-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
challenge/: __main__.py  day_01.sql  day_01_points.py  day_02_lines.py
challenge/helpers/: database.py  extents.py
challenge/sql/: day_01.sql  day_01_natural.sql  day_02_bike_paths.sql  milano_boundaries.sql
