[project]
name = "30daysmap2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "quackosm[cli]>=0.11.2",
]
[tool.setuptools]
packages = ["challenge"]
[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
    "types-pillow>=10.2.0.20240822",
]
[tool.mypy]
explicit_package_bases = true
strict = true
